# ps2.liquidwarp.net

./: .gitignore  package-lock.json  package.json  pyproject.toml  run.py  setup.cfg  update.py
generate/: __init__.py  altair_utils.py  bucket.py  constants.py  dynamic_pages.py  enum_resolvers.py  jinja_filters.py  predefined_pages.py  site.py
pages/: index.html.jinja  stats.html.jinja
pages/stats/: infantry-weapons.html.jinja  vehicle-weapons.html.jinja
pages/stats/weapons/: infantry-list.html.jinja  vehicle-list.html.jinja
sass/: mybulma.scss
statics/css/: mybulma.css  mybulma.min.css
templates/: base.html.jinja  chart.html.jinja
templates/stats/: ammo_macros.html.jinja  attachment_macros.html.jinja  cone_of_fire_macros.html.jinja  direct_damage_profile_macros.html.jinja  fire_group_macros.html.jinja  fire_mode_macros.html.jinja  fire_timing_macros.html.jinja  heat_macros.html.jinja  indirect_damage_profile_macros.html.jinja  infantry_weapon.html.jinja  lock_on_macros.html.jinja  projectile_macros.html.jinja  recoil_macros.html.jinja  vehicle_weapon.html.jinja
templates/stats/weapons/: infantry.html.jinja  vehicle.html.jinja
