[tool.poetry]
name = "ps2.liquidwarp.net"
version = "0.1.0"
description = "Daybreak Game's Planetside 2 theorycraft website (UNOFFICIAL)"

license = "MIT"

authors = [
    "Sylvain Pascou <sylvain@pascou.net>"
]

readme = "README.md"

repository = "https://github.com/spascou/ps2.liquidwarp.net"
homepage = "https://ps2.liquidwarp.net"

keywords = []

[tool.poetry.dependencies]
python = "^3.8"
ps2-analysis = "^0.10"
jinja2 = "^2.11"
google-cloud-storage = "^1.28"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.7"
flake8-bugbear = "^20.1"
isort = "^4.3"
jedi = "^0.17"
mypy = "^0.770"
pytest = "^5.4"
pytest-cov = "^2.8"
pytest-flake8 = "^1.0"
ipython = "^7.13"

[build-system]
requires = ["poetry>=1.0.5"]
build-backend = "poetry.masonry.api"
