[tool.poetry]
name = "ps2.liquidwarp.net"
version = "0.1.0"
description = "Daybreak Game's Planetside 2 theorycraft website (UNOFFICIAL)"

license = "MIT"

authors = [
    "Sylvain Pascou <sylvain@pascou.net>"
]

readme = "README.md"

repository = "https://github.com/spascou/ps2.liquidwarp.net"
homepage = "https://ps2.liquidwarp.net"

keywords = []

[tool.poetry.dependencies]
python = "^3.8"
ps2-analysis = "0.17.1"
altair-saver = "^0.5"
jinja2 = "^2.11"
google-cloud-storage = "^1.29"
htmlmin = "^0.1"
flask = "^1.1"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.8"
flake8-bugbear = "^20.1"
isort = "^5.0"
jedi = "^0.17"
mypy = "^0.782"
pytest = "^5.4"
pytest-cov = "^2.10"
pytest-flake8 = "^1.0"
ipython = "^7.16"

[build-system]
requires = ["poetry>=1.0.9"]
build-backend = "poetry.masonry.api"
